<resources>
    <string name="app_name">Chatt</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="quyt_chat">Quýt chat</string>
    <string name="user_name">User name</string>
    <string name="pass_user">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="save_account">Save account information</string>
    <string name="tieptuc">Tiếp tục</string>
    <string name="ns">Ngày sinh</string>
    <string name="sodt">Phone number</string>
    <string name="email">Email</string>
    <string name="dangky">Sign Up</string>
    <string name="Sign_up"><u>Sign up for Chatt</u></string>
    <string name="Log_in">Log In</string>
    <string name="wifi">Vui lòng cho tí Wifi/3G !</string>
    <string name="loi_khoang_trong">Vui lòng điền đầy đủ thông tin</string>
    <string name="ban_muon_thoat">Bạn muốn thoát ?</string>
    <string name="ban_chat_chan_muon_thoat">Bạn chắt chắn muốn thoát ?</string>
    <string name="type_msg">Type message</string>
    <string name="excute">Đang xử lý</string>
    <string name="error_signup">Lỗi kết nối server</string>
    <string name="online">Turn on Chatt</string>
    <string name="offline">Turn off Chatt</string>
    <string name="gps">Turn off GPS</string>
</resources>
